--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kontent-custom-element-bynder",
+  "name": "custom-element-bynder",
   "version": "1.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
